Fixing Buttons, Columns and Spacing for Mobile Views

--- a/src/app.css
+++ b/src/app.css
@@ -11519,3 +11519,17 @@ align-items: center;
   border-radius: 3em;
   margin-right: 1em;
 }
+
+@media only screen and (max-width: 575px) {
+
+  #skillsList{
+    columns: 2;
+  }
+  #aboutMeSection {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  #aboutMeSection div {
+    margin: 1em;
+  }
+}
